module(
    name = "gfxstream",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.0.14")
bazel_dep(name = "rules_license", version = "1.0.0")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "aemu",
    branch = "main",
    #commit = "3c1ced8a369417db591eb7cd083af5bb2c317975",
    remote = "https://github.com/jmacnak/aemu.git",
)